--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -39,5 +39,6 @@
     "Commerce": "Comercio",
     "Commerce name": "Nombre del comercio",
     "Type commerce": "Tipo de comercio",
-    "Description": "Descripcion"
+    "Description": "Descripcion",
+    "You are logged in": "Has iniciado sesión"
 }
