--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -46,6 +46,7 @@
     "Product Category" : "Categorias de productos",
     "There are no categories to display": "No hay categorias para mostrar",
     "Create Categories" : "Crear Categorias",
+    "Category created successfully" : "Categoría creada correctamente",
     "Show Categories" : "Mostrar Categorias",
     "Update Categories" : "Actualizar Categorias",
     "Delete Categories" : "Eliminar Categorias",
