--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -50,5 +50,7 @@
     "Show Categories" : "Mostrar Categorias",
     "Update Categories" : "Actualizar Categorias",
     "Delete Categories" : "Eliminar Categorias",
-    "Manage Categories" : "Administrar Categorias"
+    "Manage Categories" : "Administrar Categorias",
+    "Select" : "Seleccionar",
+    "State" : "Estado"
 }
