--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -38,12 +38,14 @@
     "All rights reserved.":  "Todos los derechos reservados.",
     "Commerce": "Comercio",
     "Commerce name": "Nombre del comercio",
+    "Type": "Tipo",
     "Type commerce": "Tipo de comercio",
     "Description": "Descripcion",
     "You are logged in": "Has iniciado sesión",
     "Categories": "Categorias",
     "Category": "Categoria",
     "Product Category" : "Categorias de productos",
+    "There are no commerces to display": "No hay comercios para mostrar",
     "There are no categories to display": "No hay categorias para mostrar",
     "Create Categories" : "Crear Categorias",
     "Category created successfully" : "Categoría creada correctamente",
