--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -9,6 +9,7 @@
     "Last name": "Apellido",
     "Document type": "Tipo de documento",
     "Document number": "Número de documento",
+    "Select a": "Seleccione un",
     "Department": "Departamento",
     "City": "Ciudad",
     "Address": "Dirección",
@@ -37,9 +38,12 @@
     "click here to request another": "pulsa aquí para que te enviemos otro",
     "All rights reserved.":  "Todos los derechos reservados.",
     "Commerce": "Comercio",
+    "Commerce details": "Datos del comercio",
+    "Businessman details":"Datos del comerciante",
     "Commerce name": "Nombre del comercio",
+    "Commerce Update": "Actualizar Comercio",
     "Type": "Tipo",
-    "Type commerce": "Tipo de comercio",
+    "Commerce Type": "Tipo de comercio",
     "Description": "Descripcion",
     "You are logged in": "Has iniciado sesión",
     "Categories": "Categorias",
