--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -42,6 +42,7 @@
     "Businessman details":"Datos del comerciante",
     "Commerce name": "Nombre del comercio",
     "Commerce Update": "Actualizar Comercio",
+    "Commerce updated successfully" : "Comercio actualizado correctamente",
     "Type": "Tipo",
     "Commerce Type": "Tipo de comercio",
     "Description": "Descripcion",
