--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -37,6 +37,7 @@
     "If you did not receive the email": "Si no has recibido el email",
     "click here to request another": "pulsa aquí para que te enviemos otro",
     "All rights reserved.":  "Todos los derechos reservados.",
+    "All":  "Todos",
     "Commerce": "Comercio",
     "Commerce details": "Datos del comercio",
     "Businessman details":"Datos del comerciante",
