added description to product Category and bugs fixed in forms

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -61,5 +61,6 @@
     "Delete Category" : "Eliminar Categoria",
     "Manage Categories" : "Administrar Categorias",
     "Select" : "Seleccionar",
-    "State" : "Estado"
+    "State" : "Estado",
+    "Close" : "Cerrar"
 }
