role admin working in product categories

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -62,5 +62,6 @@
     "Manage Categories" : "Administrar Categorias",
     "Select" : "Seleccionar",
     "State" : "Estado",
-    "Close" : "Cerrar"
+    "Close" : "Cerrar",
+    "Create" : "Crear"
 }
