--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -51,6 +51,7 @@
     "Categories": "Categorias",
     "Category": "Categoria",
     "Product Category" : "Categorias de productos",
+    "There are no commerce types to display": "No hay tipos de comercio para mostrar",
     "There are no commerces to display": "No hay comercios para mostrar",
     "There are no categories to display": "No hay categorias para mostrar",
     "Create Categories" : "Crear Categorias",
