--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -46,6 +46,7 @@
     "Commerce updated successfully" : "Comercio actualizado correctamente",
     "Type": "Tipo",
     "Commerce Type": "Tipo de comercio",
+    "Commerce Type created successfully" : "Tipo de comercio creado correctamente",
     "Commerce Type updated successfully" : "Tipo de comercio actualizado correctamente",
     "Description": "Descripcion",
     "You are logged in": "Has iniciado sesión",
