--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -64,7 +64,11 @@
     "Edit Category" : "Editar Categoria",
     "Delete Category" : "Eliminar Categoria",
     "Manage Categories" : "Administrar Categorias",
+    "Product" : "Producto",
+    "Product name": "Nombre del producto",
+    "Create product" : "Crear producto",
     "Select" : "Seleccionar",
+    "Image" : "Imagen",
     "State" : "Estado",
     "Close" : "Cerrar",
     "Create" : "Crear",
