--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -52,7 +52,7 @@
     "You are logged in": "Has iniciado sesión",
     "Categories": "Categorias",
     "Category": "Categoria",
-    "Product Category" : "Categorias de productos",
+    "Product Category" : "Categoria de producto",
     "There are no commerce types to display": "No hay tipos de comercio para mostrar",
     "There are no commerces to display": "No hay comercios para mostrar",
     "There are no categories to display": "No hay categorias para mostrar",
@@ -65,8 +65,15 @@
     "Delete Category" : "Eliminar Categoria",
     "Manage Categories" : "Administrar Categorias",
     "Product" : "Producto",
+    "Price" : "Precio",
+    "Quantity available" : "Cantidad disponible",
     "Product name": "Nombre del producto",
+    "Product image" : "Imagen del producto",
     "Create product" : "Crear producto",
+    "Product created successfully" : "Producto creado correctamente",
+    "Edit product" : "Editar producto",
+    "Product update": "Actualizar producto",
+    "Product updated successfully" : "Producto actualizado correctamente",
     "Select" : "Seleccionar",
     "Image" : "Imagen",
     "State" : "Estado",
