added order module

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -95,5 +95,7 @@
     "Go pay!" : "Ir a pagar!",
     "Finalize" : "Finalizar",
     "Empty cart" : "Carrito vacío",
-    "Clear cart" : "Vaciar carrito"
+    "Clear cart" : "Vaciar carrito",
+    "Orders" : "Pedidos",
+    "Date" : "Fecha"
 }
