fixed style in order.details

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -110,6 +110,7 @@
     "Observations" : "Observaciones",
     "Quantity" : "Cantidad",
     "Status" : "Estado",
-    "Order Delete" : "Eliminar Pedido"
+    "Order Delete" : "Eliminar Pedido",
+    "Products" : "Productos"
 
 }
